2010-06-19  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Platform plugin's multi-select does not take OptGroup into account
        https://bugs.webkit.org/show_bug.cgi?id=40718

        In multi-select elements, optgroup elements are counted in the index calculation,
        but in single-select they are not. Keep the same logic even when NO_LISTBOX_RENDERING
        is enabled.
        Added tests to the existing manual test, as testing this requires a special build, in which
        NO_LISTBOX_RENDERING is enabled.

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::listBoxSelectItem):
        * manual-tests/no-listbox-rendering.html:
        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::listBoxSelectItem):
2010-06-19  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Platform plugin's multi-select does not take OptGroup into account
        https://bugs.webkit.org/show_bug.cgi?id=40718

        Make sure that SelectData is valid throughout the lifetime of the dialog.
        This is mostly important for the Orbt based plugin.
        Added virtual desctructors where they were missing.

        * Api/qwebkitplatformplugin.h:
        (QWebSelectData::~QWebSelectData):
        (QWebSelectMethod::~QWebSelectMethod):
        (QWebNotificationData::~QWebNotificationData):
        * WebCoreSupport/QtPlatformPlugin.cpp:
        (WebCore::SelectInputMethodWrapper::SelectInputMethodWrapper):
        (WebCore::SelectInputMethodWrapper::~SelectInputMethodWrapper):
        (WebCore::SelectInputMethodWrapper::show):
        * WebCoreSupport/QtPlatformPlugin.h:
        * examples/platformplugin/WebPlugin.cpp:
        * examples/platformplugin/qwebkitplatformplugin.h:
        (QWebSelectData::~QWebSelectData):
        (QWebSelectMethod::~QWebSelectMethod):
        (QWebNotificationData::~QWebNotificationData):

Canonical link: https://commits.webkit.org/52497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61487 268f45cc-cd09-0410-ab3c-d52691b4dbfc