WebKit/qt/Api/qwebkitplatformplugin.h
@@ -31,7 +31,7 @@
 class QWebSelectData
 {
 public:
-    inline ~QWebSelectData() {}
+    virtual ~QWebSelectData() {}
 
     enum ItemType { Option, Group, Separator };
 
@@ -48,7 +48,7 @@ class QWebSelectMethod : public QObject
 {
     Q_OBJECT
 public:
-    inline ~QWebSelectMethod() {}
+    virtual ~QWebSelectMethod() {}
 
     virtual void show(const QWebSelectData&) = 0;
     virtual void hide() = 0;
@@ -61,6 +61,8 @@ Q_SIGNALS:
 class QWebNotificationData
 {
 public:
+    virtual ~QWebNotificationData() {}
+
     virtual const QString title() const = 0;
     virtual const QString message() const = 0;
     virtual const QByteArray iconData() const = 0;
